--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Labyrinth
+application.title=FinalLabyrinth
 application.vendor=Fasogabe
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
@@ -26,16 +26,18 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Labyrinth.jar
+dist.jar=${dist.dir}/FinalLabyrinth.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.JGameGrid-lib=../../Documents/libs_external/JGameGrid/lib
 file.reference.JGameGrid.jar=/Users/Fasogabe/Documents/libs_external/JGameGrid/lib/JGameGrid.jar
+file.reference.JGameGrid.jar-1=C:\\Users\\Michael\\Downloads\\JGameGrid (2)\\lib\\JGameGrid.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.JGameGrid.jar}
+    ${file.reference.JGameGrid.jar}:\
+    ${file.reference.JGameGrid.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
